--- a/.github/workflows/sync-image-example.yml
+++ b/.github/workflows/sync-image-example.yml
@@ -27,7 +27,8 @@ jobs:
 
     - name: Use Skopeo Tools Sync Image to Docker Hub
       run: |
-          skopeo copy docker://docker.io/redis:latest docker://registry.cn-hangzhou.aliyuncs.com/guowj/redis:latest
+          skopeo copy docker://docker.io/mysql:5.7.18 docker://registry.cn-hangzhou.aliyuncs.com/guowj/mysql:5.7.18
+          skopeo copy docker://docker.io/redis:7.2.4 docker://registry.cn-hangzhou.aliyuncs.com/guowj/redis:7.2.4
          
          
          
