--- a/.github/workflows/sync-image-example.yml
+++ b/.github/workflows/sync-image-example.yml
@@ -27,7 +27,10 @@ jobs:
 
     - name: Use Skopeo Tools Sync Image to Docker Hub
       run: |
-          skopeo copy docker://docker.io/mysql:5.7.18 docker://registry.cn-hangzhou.aliyuncs.com/tzhky/mysql:5.7.18
+          skopeo copy docker://docker.io/quay.io/minio/minio:RELEASE.2023-12-20T01-00-02Z docker://registry.cn-hangzhou.aliyuncs.com/tzhky/quay.io/minio/minio:RELEASE.2023-12-20T01-00-02Z
+          skopeo copy docker://docker.io/redis:7.2.4 docker://registry.cn-hangzhou.aliyuncs.com/tzhky/redis:7.2.4
+          skopeo copy docker://docker.io/docker.elastic.co/elasticsearch/elasticsearch:8.11.3 docker://registry.cn-hangzhou.aliyuncs.com/tzhky/docker.elastic.co/elasticsearch/elasticsearch:8.11.3
+          
          
          
          
